# celerity

./: .env.desktop.example  .env.example  .gitignore  Cargo.toml  README.md
celerity-cli/: Cargo.toml  build.rs
celerity-cli/src/: main.rs
celerity-cli/src/commands/: mod.rs  projects.rs  templates.rs
celerity-cli/src/commands/actions/: mod.rs  project.rs  template.rs  todo.rs  user.rs
celerity-cli/src/commands/controllers/: docker.rs  mod.rs  project.rs  template.rs  todo.rs  user.rs
celerity-cli/src/commands/types/: mod.rs  project.rs
celerity-cli/src/messages/: mod.rs
celerity-cli/src/texts/: mod.rs
celerity-core/: Cargo.toml
celerity-core/src/: lib.rs
celerity-core/src/auth/: mod.rs
celerity-core/src/config/: mod.rs
celerity-core/src/config/types/: mod.rs
celerity-core/src/docker/: mod.rs
celerity-core/src/errors/: mod.rs
celerity-core/src/git/github/: url.rs
celerity-core/src/projects/types/: mod.rs
celerity-core/src/services/: configuration.rs  docker.rs  mod.rs  project.rs  template.rs  todo.rs
celerity-core/src/utils/: mod.rs  yaml.rs
celerity-desktop/: components.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
celerity-desktop/public/: loading.json
celerity-desktop/src/: App.scss  App.tsx  declaration.d.ts  main.tsx  styles.css  styles.scss
celerity-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
celerity-desktop/src-tauri/src/: main.rs
celerity-desktop/src-tauri/src/app/: mod.rs
celerity-desktop/src-tauri/src/app/controllers/: configuration.rs  docker.rs  mod.rs  project.rs  template.rs
celerity-desktop/src-tauri/src/app/controllers/types/: mod.rs
celerity-desktop/src/__mock__/: board.ts
celerity-desktop/src/app/__mock__/: board.ts  docs.ts
celerity-desktop/src/app/store/: index.ts
celerity-desktop/src/pages/Home/: Home.scss  Home.tsx
celerity-desktop/src/pages/Project/: Project.scss  Project.tsx
celerity-desktop/src/shared/AnimationPlayer/: AnimationPlayer.tsx
celerity-desktop/src/ui/: global.scss  ui.scss
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/auth/: mod.rs
core/src/auth/server/: mod.rs
core/src/config/: mod.rs
core/src/config/types/: mod.rs
core/src/git/: mod.rs
core/src/git/github/: mod.rs  server.rs  url.rs
core/src/git/github/types/: mod.rs
core/src/github/: clone.rs  mod.rs
core/src/projects/: mod.rs  template.rs
core/src/projects/types/: mod.rs  template.rs
core/src/services/: project.rs  user.rs
core/src/utils/: browser.rs  json.rs  mod.rs  printer.rs  url.rs
examples/: project.json
examples/config/: basic-config.json
examples/docker/: docker-compose.example.yml
examples/templates/: node-basic-template.json  nodejs.json
src/: main.rs
src/config/: configuration.rs  mod.rs
src/utils/: json.rs
(+62 files in other folders)
