[workspace]
members = [
    "celerity-core",
    "celerity-cli",
    "celerity-desktop/src-tauri"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
dotenvy = "0.15.7"
ansi_term = "0.12"
spinoff = "0.8.0"
reqwest = {version = "*", features = ["json", "blocking"] }
chrono = "0.4.34"
uuid = "1.7.0"
viuer = "0.7.1"
serde_yaml = "0.9.32"
dotenv_codegen = "0.15.0"