[package]
name = "celerity"
version = "0.1.0"
authors = ["ElSombrero"]
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
ansi_term = { workspace = true }
core = { path = "../core" }
clap = {version = "4.5.1", features = ["derive"]}
comfy-table = "7.1.0"
figlet-rs = "0.1.5"
indoc = "2.0.4"