[package]
name = "core"
version = "0.1.0"
authors = ["ElSombrero"]
edition = "2021"

[dependencies]
git2 = "0.18.2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ansi_term = { workspace = true }
spinoff = { workspace = true }
reqwest = { workspace = true }
actix-web = "4"
open = "5.0.1"